Primeiro commit, tá na base da base

--- a/admin.html
+++ b/admin.html
@@ -27,7 +27,7 @@
     <section class="admin-area" id="admin-area">
         <h2 class="admin-title">ÁREA DE CADASTRO</h2>
         <p class="admin-warning">
-            **ATENÇÃO:** FALTA O BACKEND AINDA, MAS JÁ ESTÁ FEITO LAYOUT NAQUELAS**.
+            **ATENÇÃO:** FALTA TUDO AINDA, SO FOI UM TESTE**.
         </p>
 
         <section class="form-section" id="cadastro">
