--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class=""></div>
             <a href="tel:000000000"></a>
             <div class="user"></div> 
-          <a href="pre-cadastro.html"><button class="cta-header">PRÉ-CADASTRO</button></a>
+          <a href="pre_cadastro.html"><button class="cta-header">PRÉ-CADASTRO</button></a>
 </div>
         </div>
     </header>
