Adição de página inicial do monitor e estilização
- Movido o arquivo style.css para a pasta assets/css
- Consertado o caminho para a página de estilos principal
- Criada uma nova página para o monitor que fizer login no site
- Criado um novo arquivo de estilização para o sistema interno

--- a/pre_cadastro.html
+++ b/pre_cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Átrio - Pré-Cadastro de Paciente</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="assets/css/style.css"> 
 <body class="login-body">
 
     <div class="login-container">
@@ -13,7 +13,7 @@
 
         <h2>Solicitação de Internação</h2> 
 
-        <form action="pre_cadastro.php" method="POST" class="login-form">
+        <form action="pre_cadastro.php" method="POST" class="login-form"> <!-- TODO: Mover o arquivo php para uma pasta interna e corrigir o path -->
             
             <div class="input-group">
                 <input type="text" id="nome_paciente" name="nome_paciente" placeholder="Nome Completo do Paciente" required>
