Implementação com o banco de dados

--- a/PASS.html
+++ b/PASS.html
@@ -39,7 +39,7 @@
         <div class="header">
             <h2>Plano de Assistência Singular</h2>
         </div>
-        <form action="">
+        <form action="includes/pass.php" method="post">
             <form-group>
                 <!-- descrição da sessão, análise da sessão, observação -->
                 <label for="quixa" class="form-label">Queixa principal</label>
