--- a/agenda.html
+++ b/agenda.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/6105ef985f.js" crossorigin="anonymous"></script>
 
+  <form action="includes/processo-atendimento.php" method="POST"></form>
+  <form action="includes/atendimentos.php" method="POST"></form>
   <style>
     main.main {
       padding: 20px;
