--- a/aluno-exemplo.html
+++ b/aluno-exemplo.html
@@ -45,7 +45,9 @@
             <!-- TODO: Criar um aluno de exemplo no banco de dados e integrar a página com tal. -->
             <!-- Os valores de exemplo são todos direto do HTML. -->
             <section class="info-aluno">
-                <form action="">
+                <form action="includes/aluno-exemplo.php" method="post"></form>
+                <form action="includes/atualiza-aluno.php" method="post"></form>
+                <form action="includes/cadastro-aluno.php" method="post"></form>
                     <label for="nome" class="form-label">Nome Completo</label>
                     <input type="text" class="form-entry" readonly value="Fulano da Silva">
                     <label for="data-nasc" class="form-label">Data de nascimento</label>
