--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/6105ef985f.js" crossorigin="anonymous"></script>
 </head>
 <body id="app">
-
+        <form action="includes/dashboard.php" method="post"></form>
     <aside id="sidebar">
         <div id="upper">
         <span>
@@ -40,7 +40,7 @@
     <main class="main">
         <div class="header">
             <h2>Pacientes do dia</h2>
-            <form action="">
+            <form action="includes/lista.php" method="get">
                 <input type="text" class="input busca">
                 <button id="btn-busca" class=" button fa-solid fa-magnifying-glass"></button> <!-- TODO: Adicionar o bendito ícone + funcionalidade do botão -->
             </form>
