--- a/login.html
+++ b/login.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
+    <form action="includes/login.php" method="POST"></form>
+    <form action="includes/logout.php" method="post"></form>
     <!-- Ícones -->
     <script src="https://kit.fontawesome.com/6105ef985f.js" crossorigin="anonymous"></script>
 </head>
@@ -17,7 +19,6 @@
     <main class="login">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/500px-Circle_-_black_simple.svg.png" alt="Logo do centro de Recuperação Átrio" class="logo">
         <h2 style="margin-bottom: 1em;">Login no sistema</h2>
-        <form action="">
             <input type="text" placeholder="Usuário" class="form-txt input-login"><br>
             <input type="password" placeholder="Senha" class="form-txt input-login"><br>
             <a href="dashboard.html"><button class="btn-geral btn-login">Login</a></button>
