--- a/cadastro.html
+++ b/cadastro.html
@@ -39,7 +39,9 @@
         <div class="header">
             <h2>Cadastro de paciente</h2>
         </div>
-        <form action="">
+          <form action="includes/aluno-exemplo.php" method="post"></form>
+          <form action="includes/atualiza-aluno.php" method="post"></form>
+          <form action="includes/cadastro-aluno.php" method="post"></form>
             <label for="nome" class="form-label">Nome Completo</label>
             <input type="text" class="form-entry">
             <label for="data-nasc" class="form-label">Data de nascimento</label>
@@ -72,6 +74,7 @@
             <textarea name="obs" id="obs" class="form-txt"></textarea>
             <button class="btn-geral">Cadastrar</button>
         </form>
+    
         </div>
     </main>
 </body>
