Branch nova e página de cadastro Além disso, linkei as demais páginas na sidebar e se pá fiz algumas correções gerais.

--- a/dashboard.html
+++ b/dashboard.html
@@ -26,15 +26,15 @@
         </span>
         <ul>
             <ul>
-            <li><a href="dashboard.html"><i class="fa-solid fa-house"></i> Início</a></li>
-            <li><a href="lista-alunos.html"><i class="fa-solid fa-person"></i> Ficha de alunos</a></li>
-            <li><a href=""><i class="fa-solid fa-clipboard-list"></i> Agenda</a></li>
+            <li><a href="dashboard.html" class="page-link"><i class="fa-solid fa-house"></i> Início</a></li>
+            <li><a href="lista-alunos.html" class="page-link"><i class="fa-solid fa-person"></i> Ficha de alunos</a></li>
+            <li><a href="" class="page-link"><i class="fa-solid fa-clipboard-list"></i> Agenda</a></li>
         </ul>
         </ul>
         </div>
         <ul id="lower">
-            <li><i class="fa-solid fa-gear"></i> Configurações</li>
-            <li><a href="index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i> Sair</a></li> <!-- TODO: Adicionar funcionalidade de login. -->
+            <li><a href="" class="page-link"><i class="fa-solid fa-gear"></i> Configurações</a></li>
+            <li><a href="index.html" class="page-link"><i class="fa-solid fa-arrow-right-from-bracket"></i> Sair</a></li> <!-- TODO: Adicionar funcionalidade de login. -->
         </ul>
     </aside>
 
@@ -42,7 +42,7 @@
         <div class="header">
             <h2>Pacientes do dia</h2>
             <form action="">
-                <input type="text" class="input">
+                <input type="text" class="input busca">
                 <button id="btn-busca" class=" button fa-solid fa-magnifying-glass"></button> <!-- TODO: Adicionar o bendito ícone + funcionalidade do botão -->
             </form>
         </div>
