Adição de página estática de exemplo Além disso, deletei a página admin.html que a gente não ia usar (antiga página de cadastro) e linkei a página de exemplo no primeiro card das páginas.

--- a/cadastro.html
+++ b/cadastro.html
@@ -33,7 +33,7 @@
             <li><a href="index.html" class="page-link"><i class="fa-solid fa-arrow-right-from-bracket"></i> Sair</a></li> <!-- TODO: Adicionar funcionalidade de login. -->
         </ul>
     </aside>
-
+    <!-- TODO: funcionalidade (e um campo) de adicionar foto -->
     <main class="main">
         <button class="btn-nobg"><a href="lista-alunos.html"><i class="fa-solid fa-chevron-left"></i> Voltar</a></button>
         <div id="content">
