--- a/lista-alunos.html
+++ b/lista-alunos.html
@@ -57,6 +57,7 @@
         </nav>
         <section id="grade-pac">
             <div class="card quadrado"> <!-- TODO: Passar os cartões de paciente pra js e json, para automatização e organização. -->
+                <a href="aluno-exemplo.html">
                                         <!-- Além disso, os cards deveriam ter um limite de caracteres a serem exbidos por fora, 
                                         a partir disso sendo interrompidos por reticêncicas (...) -->
                 <img 
@@ -69,6 +70,7 @@
                     <p><strong>Idade: XX</strong></p>
                     <h4 class="espaco">Pendente : Feito</h4>
                 </div>
+            </a>
             </div>
             <div class="card quadrado">
                 <img 
