--- a/dashboard.html
+++ b/dashboard.html
@@ -57,6 +57,7 @@
             </select>
         </nav>
         <section class="lista-pac" id="pac-dia">
+            <a href="aluno-exemplo.html">
             <div class="card paciente"> <!-- TODO: Passar os cartões de paciente pra js e json, para automatização e organização -->
                 <img 
                 src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
@@ -69,6 +70,7 @@
                     <h4>Pendente : Feito</h4>
                 </div>
             </div>
+            </a>
             <div class="card paciente"> <!-- TODO: Passar os cartões de paciente pra js e json, para automatização e organização -->
                 <img 
                 src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
