Adição de página de Plano de Assistência Singular

--- a/dashboard.html
+++ b/dashboard.html
@@ -64,7 +64,7 @@
                 alt="Foto do paciente"
                 class="pac-icon">
                 <div>
-                    <h3>Nome Paciente Silva</h3>
+                    <h3>Fulano da Silva</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <p><strong>Idade: XX</strong></p>
                     <h4>Pendente : Feito</h4>
