--- a/lista-alunos.html
+++ b/lista-alunos.html
@@ -65,7 +65,7 @@
                 alt="Foto do paciente"
                 class="pac-icon quad">
                 <div>
-                    <h3 class="espaco">Nome Paciente Silva</h3>
+                    <h3 class="espaco">Fulano da Silva</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... </p>
                     <p><strong>Idade: XX</strong></p>
                     <h4 class="espaco">Pendente : Feito</h4>
