--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Átrio - Administração e Formulários</title>
+    <title>Átrio - Cadastro de Aluno</title>
     <link rel="stylesheet" href="assets/css/style_interno.css">
     <!-- Fontes personalizadas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,6 @@
         </ul>
         </div>
         <ul id="lower">
-            <li><a href="" class="page-link"></a><i class="fa-solid fa-gear"></i> Configurações</li>
             <li><a href="index.html" class="page-link"><i class="fa-solid fa-arrow-right-from-bracket"></i> Sair</a></li> <!-- TODO: Adicionar funcionalidade de login. -->
         </ul>
     </aside>
