--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
             <ul>
             <li><a href="dashboard.html" class="page-link"><i class="fa-solid fa-house"></i> Início</a></li>
             <li><a href="lista-alunos.html" class="page-link"><i class="fa-solid fa-person"></i> Ficha de alunos</a></li>
-            <li><a href="" class="page-link"><i class="fa-solid fa-clipboard-list"></i> Agenda</a></li>
+            <li><a href="agenda.html" class="page-link"><i class="fa-solid fa-clipboard-list"></i> Agenda</a></li>
         </ul>
         </ul>
         </div>
