--- a/aluno-exemplo.html
+++ b/aluno-exemplo.html
@@ -25,7 +25,7 @@
             <li><a href="dashboard.html" class="page-link"><i class="fa-solid fa-house"></i> Início</a></li>
             <li><a href="lista-alunos.html" class="page-link"><i class="fa-solid fa-person"></i> Ficha de alunos</a></li>
             <li><a href="cadastro.html" class="page-link"><i class="fa-solid fa-user-plus"></i> Cadastrar aluno</a></li>
-            <li><a href="" class="page-link"><i class="fa-solid fa-clipboard-list"></i> Agenda</a></li>
+            <li><a href="agenda.html" class="page-link"><i class="fa-solid fa-clipboard-list"></i> Agenda</a></li>
         </ul>
         </div>
         <ul id="lower">
