--- a/login.html
+++ b/login.html
@@ -17,11 +17,11 @@
 </head>
 <body id="login">
     <main class="login">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/500px-Circle_-_black_simple.svg.png" alt="Logo do centro de Recuperação Átrio" class="logo">
+        <img src="slide-bar/src/logo-atrio.jpg" alt="Logo do centro de Recuperação Átrio" class="logo">
         <h2 style="margin-bottom: 1em;">Login no sistema</h2>
-            <input type="text" placeholder="Usuário" class="form-txt input-login"><br>
+            <input type="text" placeholder="RA" class="form-txt input-login"><br>
             <input type="password" placeholder="Senha" class="form-txt input-login"><br>
-            <a href="dashboard.html"><button class="btn-geral btn-login">Login</a></button>
+            <a href="dashboard.php"><button class="btn-geral btn-login">Login</a></button>
                 <!-- TODO: Adicionar usuário e validação de login -->
         </form>
     </main>
