Movi os cards de paciente para uma função js - Dados de pacientes agora se encontram em pacientes.json - Consertei a página aluno-exemplo, que tinha quebrado - Deletei style.css já que não estávamos usando - Corrigi o caminho de arquivo de estilo da página sidebar.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -70,54 +70,6 @@
                 </div>
             </div>
             </a>
-            <div class="card paciente"> <!-- TODO: Passar os cartões de paciente pra js e json, para automatização e organização -->
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon">
-                <div>
-                    <h3>Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4>Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card paciente"> <!-- TODO: Passar os cartões de paciente pra js e json, para automatização e organização -->
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon">
-                <div>
-                    <h3>Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4>Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card paciente"> <!-- TODO: Passar os cartões de paciente pra js e json, para automatização e organização -->
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon">
-                <div>
-                    <h3>Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4>Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card paciente"> <!-- TODO: Passar os cartões de paciente pra js e json, para automatização e organização -->
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon">
-                <div>
-                    <h3>Nome Paciente Silva</h3> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4>Pendente : Feito</h4>
-                </div>
-            </div>
         </section>
     </main>
     <section id="calend">
@@ -143,6 +95,6 @@
                 </form>
             </div>
         </section>
-    
+    <script src="scripts/pacientes-dia.js" defer></script>
 </body>
 </html>
