--- a/lista-alunos.html
+++ b/lista-alunos.html
@@ -71,80 +71,8 @@
                     <h4 class="espaco">Pendente : Feito</h4>
                 </div>
             </a>
-            </div>
-            <div class="card quadrado">
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon quad">
-                <div>
-                    <h3 class="espaco">Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... </p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4 class="espaco">Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card quadrado">
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon quad">
-                <div>
-                    <h3 class="espaco">Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... </p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4 class="espaco">Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card quadrado">
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon quad">
-                <div>
-                    <h3 class="espaco">Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... </p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4 class="espaco">Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card quadrado">
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon quad">
-                <div>
-                    <h3 class="espaco">Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... </p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4 class="espaco">Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card quadrado">
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon quad">
-                <div>
-                    <h3 class="espaco">Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... </p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4 class="espaco">Pendente : Feito</h4>
-                </div>
-            </div>
-            <div class="card quadrado">
-                <img 
-                src="https://i.pinimg.com/736x/a4/d8/28/a4d8289d97adac030bab9a4e7101bb5b.jpg" 
-                alt="Foto do paciente"
-                class="pac-icon quad">
-                <div>
-                    <h3 class="espaco">Nome Paciente Silva</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... </p>
-                    <p><strong>Idade: XX</strong></p>
-                    <h4 class="espaco">Pendente : Feito</h4>
-                </div>
-            </div>
         </section>
     </main>
+    <script src="scripts/pacientes.js"></script>
 </body>
 </html>
