colocando a senha no login e acessos pra gerenciar

--- a/slide-bar/sidebar.html
+++ b/slide-bar/sidebar.html
@@ -37,6 +37,13 @@
                     <span class="item-description">Ficha Pacientes</span>
                 </a>
             </li>
+
+             <li class="side-item">
+                <a href="acessos.php">
+                    <i class="fa-solid fa-key"></i>
+                    <span class="item-description">Gerenciar Acessos</span>
+                </a>
+            </li>
         </ul>
 
         <button id="open_btn">
@@ -45,7 +52,8 @@
     </div>
 
     <div id="logout">
-        <button id="logout_btn">
+        <button id="logout_btn" >
+            <a href="logout.php"></a>
             <i class="fa-solid fa-right-from-bracket"></i>
             <span class="item-description">Logout</span>
         </button>
