--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Átrio - Login</title>
     <link rel="stylesheet" href="assets/css/style_interno.css">
-    <!-- Fontes personalizadas -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
-    <form action="includes/login.php" method="POST"></form>
-    <form action="includes/logout.php" method="post"></form>
-    <!-- Ícones -->
     <script src="https://kit.fontawesome.com/6105ef985f.js" crossorigin="anonymous"></script>
 </head>
 <body id="login">
     <main class="login">
-        <img src="slide-bar/src/logo-atrio.jpg" alt="Logo do centro de Recuperação Átrio" class="logo">
+        <img src="slide-bar/src/logo-atrio.jpg" alt="Logo do centro Átrio" class="logo">
         <h2 style="margin-bottom: 1em;">Login no sistema</h2>
-            <input type="text" placeholder="RA" class="form-txt input-login"><br>
-            <input type="password" placeholder="Senha" class="form-txt input-login"><br>
-            <a href="dashboard.php"><button class="btn-geral btn-login">Login</a></button>
-                <!-- TODO: Adicionar usuário e validação de login -->
+
+        <!-- FORM CORRETO -->
+        <form action="includes/login.php" method="POST">
+
+            <input type="text" name="email" placeholder="E-mail" class="form-txt input-login" required><br>
+
+            <input type="password" name="senha" placeholder="Senha" class="form-txt input-login" required><br>
+
+            <button type="submit" class="btn-geral btn-login">Login</button>
+
         </form>
     </main>
 </body>
+</html>
