--- a/slide-bar/sidebar.html
+++ b/slide-bar/sidebar.html
@@ -52,10 +52,10 @@
     </div>
 
     <div id="logout">
-        <button id="logout_btn" >
-            <a href="logout.php"></a>
-            <i class="fa-solid fa-right-from-bracket"></i>
-            <span class="item-description">Logout</span>
-        </button>
+       <button id="logout_btn" onclick="window.location.href='includes/logout.php'">
+    <i class="fa-solid fa-right-from-bracket"></i>
+    <span class="item-description">Logout</span>
+</button>
+
     </div>
 </nav>
